--- a/3.broad-outlines/exercises/2.1.mountain_passes.ipynb
+++ b/3.broad-outlines/exercises/2.1.mountain_passes.ipynb
@@ -102,17 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def read_data(f):\n",
-    "    \"\"\"Reads mountain passes data from a TSV file and returns a list of tuples.\"\"\"\n",
-    "    with open(f, newline='') as csvfile:\n",
-    "        reader = csv.DictReader(csvfile, delimiter='\\t')\n",
-    "        data = [\n",
-    "            (line['pass'], int(line['drop']), float(line['slope']))\n",
-    "            for line in reader\n",
-    "        ]\n",
-    "        return data"
+    "# your code here"
    ]
   },
   {
@@ -223,26 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def distance(alt, gradient):\n",
-    "    \"\"\"Calculates a distance based on the\n",
-    "    elevation and the gradient.\n",
-    "\n",
-    "    Positional arguments:\n",
-    "    alt -- the elevation\n",
-    "    gradient -- the gradient in percentage\n",
-    "    \"\"\"\n",
-    "    # converting angle in percentage into radians\n",
-    "    alpha = gradient / 100\n",
-    "\n",
-    "    # arc tangent of the angle\n",
-    "    theta = math.atan(alpha)\n",
-    "    \n",
-    "    # sin(a) = o/h (soh cah toa)\n",
-    "    hypo = alt / math.sin(theta)\n",
-    "\n",
-    "    return hypo"
+    "# your code here"
    ]
   },
   {
@@ -284,14 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def mToKm(m):\n",
-    "    \"\"\"Conversion: meters to kilometers\n",
-    "    \n",
-    "    m -- int: meters\n",
-    "    \"\"\"\n",
-    "    return round(m / 1000, 2)"
+    "# your code here"
    ]
   },
   {
@@ -354,23 +318,23 @@
     "def main(path):\n",
     "    \"\"\"Main function to process data and plot the graph.\"\"\"\n",
     "    # get data\n",
-    "    data = read_data(path)\n",
+    "    data = ???\n",
     "\n",
     "    # initialize axis\n",
     "    names, distances = [], []\n",
     "\n",
     "    # for each row in data\n",
-    "    for name, height, slope in data:\n",
+    "    for name, alt, slope in data:\n",
     "        # get distance in km\n",
-    "        meters = distance(height, slope)\n",
-    "        kilometers = mToKm(meters)\n",
+    "        meters = ???\n",
+    "        kilometers = ???\n",
     "        # append the name of the pass\n",
     "        # and the distance to the axis\n",
-    "        names.append(name)\n",
-    "        distances.append(kilometers)\n",
+    "        ???.append(name)\n",
+    "        ???.append(kilometers)\n",
     "\n",
     "    # plot\n",
-    "    plot_data(names, distances)"
+    "    ???"
    ]
   },
   {
@@ -396,15 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "\n",
-    "    # path\n",
-    "    file = '../data/mountain_passes.tsv'\n",
-    "\n",
-    "    # execute\n",
-    "    main(file)"
+    "# your code here"
    ]
   }
  ],
