Clear output cells

--- a/3.broad-outlines/answers/2.1.mountain-passes.ipynb
+++ b/3.broad-outlines/answers/2.1.mountain-passes.ipynb
@@ -177,7 +177,7 @@
     "- l’élévation totale (champ `drop`) ;\n",
     "- le pourcentage de pente entre le point A et le point B (champ `slope`).\n",
     "\n",
-    "Dire qu’une pente est à 5,31 % en moyenne revient à dire que tous les 100 mètres on s’élève à peu près de 5,31 mètres. Par rapport au point de départ, le sommet où se trouve l’angle $\\theta$, l’avancée sur 100 m constitue sont côté adjacent alors que l’élévation de 5,31 m est à l’opposé de lui. Or, notre objectif est de déterminer la longueur de l’hypoténuse. Les relations dans le triangle rectangle nous amènent à retenir deux fonctions trigonométriques pour le calcul : le sinus ou le cosinus. Prenons le premier :\n",
+    "Dire qu’une pente est à 5,31 % en moyenne revient à dire que tous les 100 mètres on s’élève à peu près de 5,31 mètres. Par rapport au point de départ, le sommet où se trouve l’angle $\\theta$, l’avancée sur 100 m constitue son côté adjacent alors que l’élévation de 5,31 m est à l’opposé de lui. Or, notre objectif est de déterminer la longueur de l’hypoténuse. Les relations dans le triangle rectangle nous amènent à retenir deux fonctions trigonométriques pour le calcul : le sinus ou le cosinus. Prenons le premier :\n",
     "\n",
     "$$\\sin(\\alpha) = \\frac{\\text{O}}{\\text{H}}$$\n",
     "\n",
