--- a/3.broad-outlines/exercises/2.2.european-mean-temperature.ipynb
+++ b/3.broad-outlines/exercises/2.2.european-mean-temperature.ipynb
@@ -65,43 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "import csv\n",
-    "\n",
-    "def read_data(f):\n",
-    "    \"\"\"Reads data from a TSV file and returns a dictionary of\n",
-    "    average temperatures by country.\"\"\"\n",
-    "    data = {}\n",
-    "    \n",
-    "    # open file\n",
-    "    with open(f, mode='r') as csvfile:\n",
-    "        reader = csv.DictReader(csvfile, delimiter='\\t')\n",
-    "        \n",
-    "        # each row\n",
-    "        for row in reader:\n",
-    "            country = row['country']\n",
-    "            year = row['year']\n",
-    "            \n",
-    "            # Extraire les températures pour chaque mois (de janvier à décembre)\n",
-    "            temperatures = [\n",
-    "                float(row['january']), float(row['february']), float(row['march']),\n",
-    "                float(row['april']), float(row['may']), float(row['june']),\n",
-    "                float(row['july']), float(row['august']), float(row['september']),\n",
-    "                float(row['october']), float(row['november']), float(row['december'])\n",
-    "            ]\n",
-    "            \n",
-    "            # add country if not yet in the file\n",
-    "            if country not in data:\n",
-    "                data[country] = {}\n",
-    "            \n",
-    "            # add temperatures to the related year\n",
-    "            data[country][year] = temperatures\n",
-    "    \n",
-    "    return data\n",
-    "\n",
-    "# call function\n",
-    "data = read_data(\"../data/european_temperatures.tsv\")"
+    "# your code here"
    ]
   },
   {
@@ -127,24 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def average_temperature(data):\n",
-    "    \"\"\"Calculate the average temperature by country and year.\n",
-    "\n",
-    "    Argument:\n",
-    "    data -- dictionary containing temperatures by country and year\n",
-    "    \"\"\"\n",
-    "    averages = {}\n",
-    "\n",
-    "    for country, years in data.items():\n",
-    "        averages[country] = {}\n",
-    "        for year, temperatures in years.items():\n",
-    "            # average temperatures: sum div nb\n",
-    "            avg_temp = sum(temperatures) / len(temperatures)\n",
-    "            averages[country][year] = round(avg_temp, 2)\n",
-    "    \n",
-    "    return averages"
+    "# your code here"
    ]
   },
   {
@@ -256,42 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def slope(x, y):\n",
-    "    \"\"\"Return the slope of a straight line,\n",
-    "    with the least squares method.\n",
-    "\n",
-    "    Arguments:\n",
-    "    x -- data in x-axis\n",
-    "    y -- data in y-axis\n",
-    "    \"\"\"\n",
-    "\n",
-    "    n = len(x)\n",
-    "    sum_xy = sum(x * y)\n",
-    "    sum_x_squared = sum(x) ** 2\n",
-    "    sum_x = sum(x)\n",
-    "    sum_y = sum(y)\n",
-    "    sum_squares_x = sum(x ** 2)\n",
-    "\n",
-    "    # formula\n",
-    "    m = (n * sum_xy - sum_x * sum_y) / (n * sum_squares_x - sum_x_squared)\n",
-    "\n",
-    "    return m\n",
-    "\n",
-    "def intercept(m, x, y):\n",
-    "    \"\"\"Intercept of a straight line.\n",
-    "    Arguments:\n",
-    "    m -- slope\n",
-    "    x -- data in x-axis\n",
-    "    y -- data in y-axis\n",
-    "    \"\"\"\n",
-    "\n",
-    "    avg_x = sum(x) / len(x)\n",
-    "    avg_y = sum(y) / len(y)\n",
-    "    b = avg_y - (m * avg_x)\n",
-    "\n",
-    "    return b"
+    "# your code here"
    ]
   },
   {
@@ -309,18 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def prediction(*, x, m, b) -> float:\n",
-    "    \"\"\"Solution to the standard form equation\n",
-    "    of a straight line.\n",
-    "\n",
-    "    Keyword-only arguments:\n",
-    "    x -- value of x\n",
-    "    m -- slope\n",
-    "    b -- intercept\n",
-    "    \"\"\"\n",
-    "    return m * x + b"
+    "# your code here"
    ]
   },
   {
@@ -338,22 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "def get_coords(data):\n",
-    "    \"\"\"Extracts coordinates from dataset for a given country.\n",
-    "    \n",
-    "    data -- average temperatures for a given country\n",
-    "    \"\"\"\n",
-    "    years = sorted([ int(year) for year in data.keys() ])\n",
-    "    avg_temperatures = [ data[str(year)] for year in years ]\n",
-    "\n",
-    "    x = np.array(years)\n",
-    "    y = np.array(avg_temperatures)\n",
-    "\n",
-    "    return x, y"
+    "# your code here"
    ]
   },
   {
@@ -371,9 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "X, Y = get_coords(averages['Lettonie'])"
+    "# your code here"
    ]
   },
   {
@@ -391,10 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "m = slope(X, Y)\n",
-    "b = intercept(m, X, Y)"
+    "# your code here"
    ]
   },
   {
@@ -412,9 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "Y_pred = [ prediction(x=x, m=m, b=b) for x in X ]"
+    "# your code here"
    ]
   },
   {
@@ -489,18 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def std_deviation(data):\n",
-    "    \"\"\"Computes standard deviation\"\"\"\n",
-    "    mean = sum(data) / len(data)\n",
-    "\n",
-    "    variance = sum([\n",
-    "        (x - mean) ** 2\n",
-    "        for x in data\n",
-    "    ]) / len(data)\n",
-    "\n",
-    "    return round(variance ** .5, 2)"
+    "# your code here"
    ]
   },
   {
@@ -622,26 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "mean_1950_2020 = sum(averages['Allemagne'].values()) / len(averages['Allemagne'])\n",
-    "std_deutschland = list(filter(lambda x: x[0] == 'Allemagne', std_deviations))[0][1]\n",
-    "mean_2021 = sum(list(deutschland_year_2021.values())) / len(deutschland_year_2021)\n",
-    "lower_limit = mean_1950_2020 - 2 * std_deutschland\n",
-    "upper_limit = mean_1950_2020 + 2 * std_deutschland\n",
-    "\n",
-    "if (mean_2021 < lower_limit) or (mean_2021 > lower_limit):\n",
-    "    print('Anomalie climatique détectée !')\n",
-    "else:\n",
-    "    print('Situation climatique normale')\n",
-    "\n",
-    "print(\n",
-    "    f\"Température moyenne relevée entre 1950 et 2020 : {mean_1950_2020:.2f}°C\",\n",
-    "    f\"Écart-type : {std_deutschland}°C\",\n",
-    "    f\"Température attendue entre {lower_limit:.2f}°C et {upper_limit:.2f}°C\",\n",
-    "    f\"Température moyenne relevée en 2021 : {mean_2021:.2f}°C\",\n",
-    "    sep=\"\\n\"\n",
-    ")"
+    "# your code here"
    ]
   }
  ],
