--- a/3.broad-outlines/exercises/2.2.european-mean-temperature.ipynb
+++ b/3.broad-outlines/exercises/2.2.european-mean-temperature.ipynb
@@ -81,7 +81,19 @@
    "id": "29e7a327-1fe0-4581-867d-946b54396e6b",
    "metadata": {},
    "source": [
-    "Préparez à présent une fonction `average_temperature()` qui prenne en entrée votre structure de données et renvoie la température moyenne par pays et par année :"
+    "Préparez à présent une fonction `average_temperature()` qui prenne en entrée votre structure de données et renvoie la température moyenne par pays et par année :\n",
+    "\n",
+    "```python\n",
+    "data = {\n",
+    "    'France': {\n",
+    "        '1950': 11.61,\n",
+    "        '1951': 10.15\n",
+    "    },\n",
+    "    'Allemagne': {\n",
+    "        '1950': 12.97\n",
+    "    }\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -229,7 +241,7 @@
    "id": "d36b2d07-d503-4820-8fef-0826e1ae486e",
    "metadata": {},
    "source": [
-    "L’objectif est maintenant d’obtenir les coordonnées $x$ et $y$ d’un relevé de températures. Créez une fonction `get_coords()` qui renvoie deux objets de type `np.array` pour les années et les températures :"
+    "L’objectif est maintenant d’obtenir les coordonnées $x$ et $y$ d’un relevé de températures moyennes. Créez une fonction `get_coords()` qui renvoie deux objets de type `np.array` pour les années et les températures moyennes d’un pays, à partir donc de la variable `averages`. En d’autres termes, votre fonction doit simplement renvoyer un tableau des années et un autre des températures moyennes pour une clé du dictionnaire `averages` :"
    ]
   },
   {
@@ -480,7 +492,7 @@
    "id": "c9bd55ed-83e5-42ea-acdf-6964771aab52",
    "metadata": {},
    "source": [
-    "L’année a-t-elle été plus chaude ou plus fraîche que d’habitude en Allemagne ? Concevez une procédure qui, à l’aide de conditions, permette de le déterminer :"
+    "L’année a-t-elle été plus chaude ou plus fraîche que d’habitude en Allemagne ? Concevez une procédure qui permette, à l’aide de conditions, et plus que de simplement le déterminer, de détecter si la situation climatique est anormale :"
    ]
   },
   {
