--- a/4.data-analysis/1.about-matrices.ipynb
+++ b/4.data-analysis/1.about-matrices.ipynb
@@ -13,7 +13,7 @@
    "id": "22f9e65c-e83b-4b49-920f-a7604ad0cad7",
    "metadata": {},
    "source": [
-    "L’analyse de données repose principalement sur la manipulation d’objets mathématiques aux propriétés particulières. Si effectuer des opérations avec des scalaires nous est familier depuis le plus jeune âge, comme additionner 2 et 3, les réaliser avec des structures de plus haute dimensionnalité à de quoi nous dérouter. Aussi, plutôt que de les comprendre, on préfère déléguer à des bibliothèques spécialisées la responsabilité de la tâche.\n",
+    "L’analyse de données repose principalement sur la manipulation d’objets mathématiques aux propriétés particulières. Si effectuer des opérations avec des scalaires nous est familier depuis le plus jeune âge, comme additionner 2 et 3, les réaliser avec des structures de plus haute dimensionnalité a de quoi nous dérouter. Aussi, plutôt que de les comprendre, on préfère déléguer à des bibliothèques spécialisées la responsabilité de la tâche.\n",
     "\n",
     "Prenons l’exemple simple d’une série de notes :"
    ]
