--- a/4.data-analysis/1.about-matrices.ipynb
+++ b/4.data-analysis/1.about-matrices.ipynb
@@ -1017,10 +1017,22 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Les valeurs propres seront les racines du polynôme de degré 2 : $x^2 + 2x - 3$, soit $\\lambda_1 = 1$ et $\\lambda_2 = -3$.\n",
-    "\n",
-    "#### Rappel : calcul des racines d’un polynôme\n",
-    "\n",
+    "Les valeurs propres seront les racines du polynôme de degré 2 : $x^2 + 2x - 3$, à savoir $\\lambda_1 = 1$ et $\\lambda_2 = -3$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cbcee69-b3ac-470f-82cf-502d4d1a1796",
+   "metadata": {},
+   "source": [
+    "#### Rappel : calcul des racines d’un polynôme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c0afda6-e105-4a11-8bd3-848a7c028060",
+   "metadata": {},
+   "source": [
     "Pour un polynôme de degré $n$, il ne peut y avoir au plus que $n$ racines. Déterminer le nombre de racines passe par le calcul du discriminant. Dans la formule quadratique, le discriminant vaut $\\Delta = b^2 - 4ac$. Pour notre exemple, le discriminant est égal à 16. Comme le résultat est supérieur à 0, nous savons qu’il y a deux solutions à notre polynôme (en dessous de 0 il n’aurait pas eu de solution et s’il avait été égal à 0 il n’en aurait une qu’une).\n",
     "\n",
     "Comme nous savons que notre polynôme est composé de deux racines, nous allons nous attacher à les trouver en appliquant la formule quadratique :\n",
@@ -1109,6 +1121,33 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
+    "Le système d’équations accepte une infinité de solutions car les deux équations sont équivalentes. Prenons $x_1 = 1$ :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    \\left\\{\n",
+    "    \\begin{array}{rcl}\n",
+    "        -3 \\times 1 + x_2 & = & 0 \\\\\n",
+    "        3 \\times 1 - x_2 & = & 0\n",
+    "    \\end{array}\n",
+    "    \\right.\n",
+    "    &\\Rightarrow&\n",
+    "    \\left\\{\n",
+    "    \\begin{array}{rcl}\n",
+    "        -3 & = & -x_2 \\\\\n",
+    "        3 & = & x_2\n",
+    "    \\end{array}\n",
+    "    \\right.\n",
+    "    &\\Rightarrow&\n",
+    "    \\left\\{\n",
+    "    \\begin{array}{rcl}\n",
+    "        x_2 & = & 3 \\\\\n",
+    "        x_2 & = & 3\n",
+    "    \\end{array}\n",
+    "    \\right.\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
     "Le vecteur propre associé à $\\lambda_1$ est par conséquent $\\begin{bmatrix} 1 \\\\ 3 \\end{bmatrix}$.\n",
     "\n",
     "Et pour $\\lambda_2$, le système d’équations vaut :\n",
@@ -1148,7 +1187,34 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Le vecteur propre associé à $\\lambda_2$ est ainsi $\\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix}$.\n",
+    "On se retrouve à nouveau avec un système d’équations qui accepte une infinité de solutions. Pour s’en assurer, admettons 1 pour valeur de $x_1$ :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    \\left\\{\n",
+    "    \\begin{array}{rcl}\n",
+    "        1 + x_2 & = & 0 \\\\\n",
+    "        3 \\times 1 + 3x_2 & = & 0\n",
+    "    \\end{array}\n",
+    "    \\right.\n",
+    "    &\\Rightarrow&\n",
+    "    \\left\\{\n",
+    "    \\begin{array}{rcl}\n",
+    "        1 & = & -x_2 \\\\\n",
+    "        3 & = & -3x_2\n",
+    "    \\end{array}\n",
+    "    \\right.\n",
+    "    &\\Rightarrow&\n",
+    "    \\left\\{\n",
+    "    \\begin{array}{rcl}\n",
+    "        x_2 & = & -1 \\\\\n",
+    "        x_2 & = & -\\frac{3}{3} = -1\n",
+    "    \\end{array}\n",
+    "    \\right.\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Le vecteur propre associé à $\\lambda_2$ est ainsi $\\begin{bmatrix} 1 \\\\ -1 \\end{bmatrix}$.\n",
     "\n",
     "Avec *Numpy*, la méthode `.eig()` renvoie un tuple avec les valeurs propres et les vecteurs propres associés :"
    ]
@@ -1191,7 +1257,54 @@
     "    \\vec{v} &= \\begin{bmatrix} \\frac{1}{\\sqrt{10}} \\\\ \\frac{3}{\\sqrt{10}} \\end{bmatrix} \\\\\n",
     "    \\vec{v} &= \\begin{bmatrix} 0.31622 \\\\ 0.94868 \\end{bmatrix}\n",
     "\\end{align}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Pourquoi alors *Numpy* a-t-il trouvé comme vecteur propre $\\begin{bmatrix} -0.31622 \\\\ -0.94868 \\end{bmatrix}$ quand nous avons calculé $\\begin{bmatrix} 0.31622 \\\\ 0.94868 \\end{bmatrix}$ ? Il s’agit en fait du même vecteur mais sous une représentation différente :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f50aa0-8b5a-4a8a-bd4f-2a6c586062ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "v1 = np.array([0.31622, 0.94868])\n",
+    "v2 = np.array([-0.31622, -0.94868])\n",
+    "\n",
+    "origin = np.array([0, 0])\n",
+    "\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.quiver(*origin, *v1, color='blue', angles='xy', scale_units='xy', scale=1, label='v1 (0.31622, 0.94868)', linewidth=2)\n",
+    "plt.quiver(*origin, *v2, color='red', angles='xy', scale_units='xy', scale=1, label='v2 (-0.31622, -0.94868)', linewidth=2)\n",
+    "\n",
+    "plt.xlim(-3, 3)\n",
+    "plt.ylim(-3, 3)\n",
+    "plt.axhline(0, color='black',linewidth=0.5, ls='--')\n",
+    "plt.axvline(0, color='black',linewidth=0.5, ls='--')\n",
+    "plt.grid()\n",
+    "plt.title('Visualisation des Vecteurs Propres')\n",
+    "plt.xlabel('Axe X')\n",
+    "plt.ylabel('Axe Y')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "410d533f-950c-4b04-b1c9-2a1fdbc76b6c",
+   "metadata": {},
+   "source": [
+    "Les deux vecteurs pointent dans la même direction de l’espace vectoriel mais dans des sens différents. Pour s’en assurer, il suffit de calculer leurs coefficients directeurs avec la formule :\n",
+    "\n",
+    "$$\n",
+    "m = \\frac{y}{x}\n",
+    "$$\n",
+    "\n",
+    "Le coefficient directeur de $\\vec{v}_1$ vaut ainsi $0.94868 \\div 0.31622 = 3$ et le coefficient directeur de $\\vec{v}_1$ vaut $-0.94868 \\div -0.31622 = 3$"
    ]
   }
  ],
