Section on a range of probabilities

--- a/4.data-analysis/4.normal-law.ipynb
+++ b/4.data-analysis/4.normal-law.ipynb
@@ -465,6 +465,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7bd4f1d3-597b-4d12-8876-a1f0a7d4fb90",
+   "metadata": {},
+   "source": [
+    "#### Pour $X_1 \\leq X \\leq X_2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56d71d3d-d663-4eaa-ad89-f1314bb52394",
+   "metadata": {},
+   "source": [
+    "Dans le cas spécifique où l’on recherche une étendue de probabilités, on applique la règle de probabilités :\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{P}(X_1 \\leq X \\leq X_2) = \\mathbb{P}(X \\leq X_2) − \\mathbb{P}(X \\leq X_1)\n",
+    "$$\n",
+    "\n",
+    "Par exemple, si $X_1$ est situé à un écart-type en dessous de la moyenne et $X_2$ à un écart-type au-dessus de la moyenne, il y a environ 68,26 % de chances que *X* se situe dans une plage entre les deux seuils."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f26e3ea5-91e2-4bfa-959e-0dbeb6b92166",
    "metadata": {},
    "source": [
