--- a/4.data-analysis/exercises/4.2.applications-on-normal-law.ipynb
+++ b/4.data-analysis/exercises/4.2.applications-on-normal-law.ipynb
@@ -41,6 +41,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "35b49399-2d74-49ba-bb13-800dda289043",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(12-18) / 4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e28d98da-bd00-4f5e-9628-bd9054a631fb",
    "metadata": {},
@@ -73,6 +94,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "642821a2-df29-4539-93e4-9aef59136309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temps_sec = 200 * 500 / 1000\n",
+    "ecart_type = (30 * 500 ** .5) / 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "75fd8a71-2dbd-436f-9bb0-98a669cfec14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-14.907119849998598"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(90- temps_sec) / ecart_type"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "584738e8-fca2-4d76-ac5e-c030fd746419",
    "metadata": {},
@@ -87,6 +140,36 @@
    "source": [
     "On remarque que, dans un texte journalistique, la fréquence d’apparition des noms propres suit une distribution normale, avec une moyenne de 5 par page et un écart-type de 1,5. Quelle est la probabilité qu’une page contienne plus de 7 noms propres ?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93476c80-afd6-4c56-a2ec-d711f27625a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09179999999999999"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(7 - 5) / 1.5\n",
+    "1 - 0.9082"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5df261f4-4d7b-4d03-85de-abea391d81eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
