--- a/4.data-analysis/exercises/4.2.applications-on-normal-law.ipynb
+++ b/4.data-analysis/exercises/4.2.applications-on-normal-law.ipynb
@@ -21,7 +21,10 @@
    "id": "f9695d7f-7cd0-44ab-8745-65a0189432c0",
    "metadata": {},
    "source": [
-    "Dans une grande base de corpus textuels, on observe que la fréquence des mots suit une distribution normale avec une moyenne de 15 occurrences par mot et un écart-type de 5. Quelle proportion de mots apparaissent entre 10 et 20 fois dans ce corpus ?"
+    "Dans une grande base de corpus textuels, on observe que la fréquence des mots suit une distribution normale avec une moyenne de 15 occurrences par mot et un écart-type de 5.\n",
+    "\n",
+    "**Question n°1 :** Calculez $\\mathbb{P}(X \\leq 18)$.  \n",
+    "**Question n°2 :** Quelle proportion de mots apparaissent entre 10 et 20 fois dans ce corpus ?"
    ]
   },
   {
@@ -37,28 +40,10 @@
    "id": "ac6bbc0e-2112-4fce-bfe5-b3ab6aece228",
    "metadata": {},
    "source": [
-    "Dans un corpus littéraire, la longueur des phrases suit une distribution normale avec une moyenne de 18 mots et un écart-type de 4 mots. Quelle est la probabilité qu’une phrase choisie au hasard ait plus de 25 mots ? Moins de 12 mots ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "35b49399-2d74-49ba-bb13-800dda289043",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.5"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(12-18) / 4"
+    "Dans un corpus littéraire, la longueur des phrases suit une distribution normale avec une moyenne de 18 mots et un écart-type de 4 mots.\n",
+    "\n",
+    "**Question n°1 :** Quelle est la probabilité qu’une phrase choisie au hasard ait moins de 12 mots ?  \n",
+    "**Question n°2 :** Et plus de 25 mots ?"
    ]
   },
   {
@@ -74,7 +59,11 @@
    "id": "1691fc0e-1e72-4502-b396-18c24434c037",
    "metadata": {},
    "source": [
-    "Dans un corpus d’articles scientifiques, la profondeur moyenne des arbres syntaxiques est de 3 niveaux avec un écart-type de 0,5. Quelle proportion de phrases a une profondeur comprise entre 2,5 et 3,5 ?"
+    "Dans un corpus d’articles scientifiques, la profondeur moyenne des arbres syntaxiques est de 3 niveaux avec un écart-type de 0,5.\n",
+    "\n",
+    "**Question n°1 :** Calculez $\\mathbb{P}(2.5 \\leq X \\leq 3.5)$ ?  \n",
+    "**Question n°2 :** Quel est le quantile à 97,72 %  \n",
+    "**Question n°3 :** Combien de phrases dépassent le seuil des 4 niveaux de profondeur syntaxique ?"
    ]
   },
   {
@@ -90,39 +79,12 @@
    "id": "35da76c1-cfe9-483c-a9d8-241c50dadbe8",
    "metadata": {},
    "source": [
-    "Supposons qu’un lecteur moyen prend 200 ms en moyenne pour lire un mot dans un texte, avec un écart-type de 30 ms. Si un texte contient 500 mots, quelle est la probabilité qu’il soit lu en moins de 90 secondes ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "642821a2-df29-4539-93e4-9aef59136309",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temps_sec = 200 * 500 / 1000\n",
-    "ecart_type = (30 * 500 ** .5) / 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "75fd8a71-2dbd-436f-9bb0-98a669cfec14",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-14.907119849998598"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(90- temps_sec) / ecart_type"
+    "Supposons qu’un lecteur mette en moyenne 200 ms pour lire un mot dans un texte, avec un écart-type de 30 ms.\n",
+    "\n",
+    "**Rappel :** l’écart-type total se calcule depuis la variance (*V*) totale. Comme $V = \\sigma^2$, alors $V_{totale} = n \\times \\sigma^2$, aussi $\\sigma_{total} = \\sqrt{V_{totale}}$, d’où $\\sigma_{total} = \\sigma \\times \\sqrt{n}$\n",
+    "\n",
+    "**Question n°1 :**  Si un texte contient 500 mots, quelle est la probabilité qu’il soit lu en moins de 90 secondes ?  \n",
+    "**Question n°2 :** Quel est le quantile à 38 % pour des textes de 300 mots ?"
    ]
   },
   {
@@ -138,38 +100,11 @@
    "id": "b45c4e1a-9e91-4b0d-a9b9-89885805226a",
    "metadata": {},
    "source": [
-    "On remarque que, dans un texte journalistique, la fréquence d’apparition des noms propres suit une distribution normale, avec une moyenne de 5 par page et un écart-type de 1,5. Quelle est la probabilité qu’une page contienne plus de 7 noms propres ?"
+    "On remarque que, dans un texte journalistique, la fréquence d’apparition des noms propres suit une distribution normale, avec une moyenne de 4 par page et un écart-type de 1,5.\n",
+    "\n",
+    "**Question n°1 :** Quelle est la probabilité qu’une page contienne plus de 7 noms propres ?  \n",
+    "**Question n°2 :** Quelle est la probabilité qu’un article de dix pages contienne entre 30 et 45 noms propres ?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "93476c80-afd6-4c56-a2ec-d711f27625a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.09179999999999999"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#(7 - 5) / 1.5\n",
-    "1 - 0.9082"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5df261f4-4d7b-4d03-85de-abea391d81eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
