Section on bias-variance tradeoff

--- a/4.data-analysis/3.statistical-measurements.ipynb
+++ b/4.data-analysis/3.statistical-measurements.ipynb
@@ -422,7 +422,15 @@
    "id": "b860f9c9-4f23-49f1-a56f-40a8fefd97c8",
    "metadata": {},
    "source": [
-    "### La variance empirique"
+    "### La variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba578561-aefc-4a37-8cba-c7e4e9ffe497",
+   "metadata": {},
+   "source": [
+    "#### La variance empirique"
    ]
   },
   {
@@ -543,6 +551,24 @@
     "$$\n",
     "\\text{CV} = \\frac{\\sigma}{\\mu} \\times 100\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a4523c-e33f-4b58-961b-584f96daa157",
+   "metadata": {},
+   "source": [
+    "### Approche du compromis biais-variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "041b977f-5ae9-4cd1-b345-af70a034d2f3",
+   "metadata": {},
+   "source": [
+    "Les modèles statistiques doivent trouver un équilibre entre précision et généralisation. Un modèle trop simple, ou sous-entraîné, a un **biais élevé** : il ne capture pas les tendances des données. À l’opposé, un modèle sur-entraîné disposera d’une **variance élevée** : il s’ajuste parfaitement aux données mais échoue à généraliser.\n",
+    "\n",
+    "C'est ce mécanisme qui est illustré par les écarts-types empirique et théorique. Le premier, calculé à partir des données, se laisse influencer par la variance spécifique à l’échantillonage alors qu’en lui ajoutant un degré de liberté on rend mieux compte de la vraie dispersion des données en population générale."
    ]
   }
  ],
