--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -27,7 +27,8 @@
    "source": [
     "import random\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy.spatial.distance import pdist, squareform"
    ]
   },
   {
@@ -151,10 +152,13 @@
    "outputs": [],
    "source": [
     "# 10 texts with a score on 5 categories\n",
+    "n_texts = 10\n",
+    "categories = [\"Sciences\", \"Politique\", \"Littérature\", \"Journalisme\", \"Philosophie\"]\n",
+    "\n",
     "df = pd.DataFrame(\n",
-    "    data=np.random.randint(0, 21, size=(10, 5)),\n",
-    "    index=[i + 1 for i in range(0, 10)],\n",
-    "    columns=[\"Sciences\", \"Politique\", \"Littérature\", \"Journalisme\", \"Philosophie\"]\n",
+    "    data=np.random.randint(0, 21, size=(n_texts, len(categories))),\n",
+    "    index=[f\"Text {i + 1}\" for i in range(0, n_texts)],\n",
+    "    columns=categories\n",
     ")\n",
     "\n",
     "display(df)"
@@ -236,6 +240,182 @@
    "outputs": [],
    "source": [
     "display(dissimilarity_matrix / 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c1d409b-8815-43c2-af0f-56542e4e08d4",
+   "metadata": {},
+   "source": [
+    "De là, nous pouvons effectuer des prédictions sur les *clusters* formés entre les catégories. Peut-être la littérature et la philosophie sont-elles liées par leur coefficient de dissimilarité et, comme la philosophie et la politique sont elles-mêmes reliées, pourrions-nous en conclure que les trois disciplines forment un groupe.\n",
+    "\n",
+    "**Remarque :** les données sont générées aléatoirement aussi les groupes seront-ils toujours différents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "244d4f99-3233-4ca0-81d3-29504803770e",
+   "metadata": {},
+   "source": [
+    "## Une matrice de distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ec0db63-49fd-4466-a5e0-e3a09d7d38cf",
+   "metadata": {},
+   "source": [
+    "Bien souvent, lorsque l’on calcule la dissimilarité entre des vecteurs, on calcule la distance euclidienne :\n",
+    "\n",
+    "$$\n",
+    "d(\\mathbf{x}, \\mathbf{y}) = \\sqrt{\\sum_{i=1}^{n} (x_i - y_i)^2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5477ee91-61b2-4df5-8588-78ee1442dbf4",
+   "metadata": {},
+   "source": [
+    "### Calcul de la distance euclidienne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dab24a1-7e13-4c13-b646-5a9f934e60f3",
+   "metadata": {},
+   "source": [
+    "La fonction peut s’interpréter en Python :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddc8e720-6fd0-4ac9-927c-1ad2fd165722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euclidean_distance(*, a:list, b:list) -> float:\n",
+    "    \"\"\"Euclidean distance between two vectors.\n",
+    "    \n",
+    "    Keyword arguments:\n",
+    "    a -- first vector\n",
+    "    b -- second vector\n",
+    "    \"\"\"\n",
+    "    # difference between indices\n",
+    "    coords = [\n",
+    "        (x - y) ** 2\n",
+    "        for x, y in zip(a, b)\n",
+    "    ]\n",
+    "    # distance = square root of the sum of coords\n",
+    "    return sum(coords) ** .5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e9767a9-ed24-4f33-b6cc-0eb87e4b617a",
+   "metadata": {},
+   "source": [
+    "Pour l’appliquer à notre jeu de données, on va d’abord générer une matrice de distances nulle avant de la remplir en se servant de la symétrie :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7785b2e3-da44-4e0b-aef1-b8f21134a4eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a null matrix\n",
+    "pairwise_distances = np.zeros((n_texts, n_texts))\n",
+    "\n",
+    "for i in range(n_texts):\n",
+    "    for j in range(i, n_texts):  # start at 'i' to avoid calculating b-a pair if a-b already stored\n",
+    "        dist = euclidean_distance(a=df.iloc[i].values.tolist(), b=df.iloc[j].values.tolist())\n",
+    "        pairwise_distances[i, j] = dist\n",
+    "        pairwise_distances[j, i] = dist  # matrix is symetric\n",
+    "\n",
+    "display(pairwise_distances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7791b6c8-4cb5-4683-9f73-833cad08b442",
+   "metadata": {},
+   "source": [
+    "### Calcul avec *Numpy*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7de5d1b-5b53-44fd-babe-f3cbd69ddfbc",
+   "metadata": {},
+   "source": [
+    "Calculer la distance euclidienne entre deux vecteurs *a* et *b* revient à calculer la norme du vecteur différence $a - b$.\n",
+    "\n",
+    "$$\n",
+    "\\|\\mathbf{v}\\| = \\sqrt{\\sum_{i=1}^{n} v_i^2}\n",
+    "$$\n",
+    "\n",
+    "Or, la fonction `.linalg.norm()` de *Numpy* permet d’obtenir directement la norme d’un vecteur ; aussi pouvons-nous nous passer de la fonction `euclidean_distance()` définie plus haut :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258e5447-1ebf-47f3-8cae-d61705872f30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a null matrix\n",
+    "pairwise_distances = np.zeros((n_texts, n_texts))\n",
+    "\n",
+    "for i in range(n_texts):\n",
+    "    # find vector a\n",
+    "    vector_a = df.iloc[i].values\n",
+    "    for j in range(i, n_texts):\n",
+    "        # find vector b\n",
+    "        vector_b = df.iloc[j].values\n",
+    "        dist = np.linalg.norm(vector_a - vector_b)\n",
+    "        pairwise_distances[i, j] = dist\n",
+    "        pairwise_distances[j, i] = dist\n",
+    "\n",
+    "display(pairwise_distances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a221450a-ee13-4496-878b-d4515e1c69f7",
+   "metadata": {},
+   "source": [
+    "### Une bibliothèque scientifique spécialisée"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "335a173b-6cb4-4e06-ad14-e494b983a56b",
+   "metadata": {},
+   "source": [
+    "La bilbiothèque *Scipy* fournit des méthodes spécialisées pour le calcul scientifique. Utilisons les fonctions `pdist` et `squareform` du module `spatial.distance` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d469d09-4d66-4448-b6c0-efb90895d21c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# euclidean matrix\n",
+    "distances = pdist(df.values, metric='euclidean')\n",
+    "\n",
+    "# to a square matrix\n",
+    "distance_matrix = squareform(distances)\n",
+    "\n",
+    "# to a dataframe\n",
+    "distance_df = pd.DataFrame(distance_matrix, index=df.index, columns=df.index)\n",
+    "\n",
+    "display(distance_df)"
    ]
   }
  ],
